--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
+    "jsonwebtoken": "^8.4.0",
     "leaflet": "^1.3.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
+    "sequelize": "^4.41.2"
   }
 }
